# cpg_go1_simulation

./: LICENSE  README.md  pyproject.toml
examples/: demo_video3_gait.py  demo_video4_gait_transition.py  demo_video5_sensory_feedback_path_following.py  demo_video6_sensory_feedback_reflex.py  demo_video7_backward_control.py  gen_cpg_data.py
resources/best_model/: best_model_v1.2.pt
src/cpg_go1_simulation/: config.py
src/cpg_go1_simulation/execution_neural_network/: mlp.py
src/cpg_go1_simulation/gait_and_transition/: export_cpg.py  process_network.py
src/cpg_go1_simulation/sensor/: __init__.py  quadruped_robot.py  realtime_controller.py  reflexion_processor.py  robot_controller.py  sensor.py  visual_processor_rgb.py
src/cpg_go1_simulation/sensor/Quadruped_model/go1/: go1.urdf
src/cpg_go1_simulation/sensor/Quadruped_model/go1/meshes/: depthCamera.stl  ultraSound.stl
src/cpg_go1_simulation/sensor/Quadruped_model/plane/: plane10.urdf  plane1000.urdf
src/cpg_go1_simulation/sensor/Quadruped_model/terrain/: part_terrain_short.urdf
src/cpg_go1_simulation/sensor/Quadruped_model/terrain/meshes/2.5/: plane_box_1.STL  plane_box_2.STL  slope_1.STL  slope_2.STL
src/cpg_go1_simulation/stein/: base.py  implementations.py
