[project]
name = "cpg-go1-simulation"
version = "0.1.0"
description = "A Python package for simulating the CPG-GO1 model."
readme = "README.md"
authors = [
    { name = "Xiyan Liu", email = "dipsy@zju.edu.cn" },
    { name = "Yide Liu", email = "yide_liu@zju.edu.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pybullet==3.2.6",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
